apk-telegram-bot-ci-gateway-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apk-telegram-bot-ci-gateway
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              apk-telegram-bot-ci-gateway: "true"
  podSelector:
    matchLabels:
      apk-telegram-bot-ci-gateway: "true"
