ci-gateway-internal-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ci-gateway-internal
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              ci-gateway-internal: "true"
  podSelector:
    matchLabels:
      ci-gateway-internal: "true"
